add final font layout

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ h1 {
 	font-size: 50px;
 	background-color: yellow;
 	text-align: center;
+	font-family: "Times New Roman";
 }
 .strong6 {
 	font-weight: 850;
